# py-flow

./: .gitignore  API.md  IRS_DEMO.md  LAKEHOUSE.md  LICENSE  README.md  ROADMAP.md  SCHEDULER.md  STREAMING.md  demo_agent_builder.py  demo_backtest.py  demo_bridge.py  demo_ir_swap.py  demo_irs.py  demo_lakehouse.py  demo_lakehouse_ingest.py  demo_lakehouse_rls.py  demo_media.py  demo_scheduler.py  demo_state_machine.py  demo_trading.py  pyproject.toml  run_all_tests.sh  run_demo_tests.sh  run_tests.sh
.github/workflows/: ci.yml  publish.yml
agents/: _codegen.py  _context.py  _dashboard.py  _datascience.py  _document.py  _feed.py  _lakehouse.py  _oltp.py  _query.py  _team.py  _timeseries.py
agents/_eval/: datasets.py  framework.py  scorers.py
ai/: __init__.py  _embeddings.py  _extraction.py  _gemini.py  _llm.py  _rag.py  _tools.py  _types.py  agent.py  client.py  embeddings.py  eval.py  eval_datasets.py  extraction.py  memory.py  rag.py  team.py
bridge/: store_bridge.py  type_mapping.py
bridge/sinks/: __init__.py  lakehouse.py
datacube/: __init__.py  compiler.py  config.py  engine.py  server.py
datacube/static/: index.html
db/: __init__.py
examples/: README.md  pm_client.py  quant_client.py  risk_client.py
lakehouse/: __init__.py  _registry.py  admin.py  catalog.py  models.py  query.py  rls_server.py  services.py  sync.py
marketdata/: __init__.py  _registry.py  admin.py  bus.py  models.py  server.py
marketdata/consumers/: ws_publisher.py
marketdata/feeds/: simulator.py
media/: __init__.py  _registry.py  admin.py  chunking.py  extraction.py  models.py  store.py
models/agent_generated/: __init__.py
objectstore/: _minio.py  client.py
reactive/: bridge.py  computed.py  expr.py
scheduler/: __init__.py  _registry.py  admin.py  client.py  cron.py  dag.py  dag_runner.py  decorators.py  models.py  resolve.py  server.py
server/: app.py
store/: __init__.py  _client.py  base.py  client.py  connection.py  dh.py  permissions.py  query_result.py  registry.py  schema.py  server.py  state_machine.py  subscriptions.py
store/columns/: __init__.py  ai.py  finance.py  scheduler.py
store/columns/agent_generated/: __init__.py
streaming/: __init__.py  _registry.py  admin.py  agg.py  client.py  decorator.py  table.py
tests/: _sched_fixtures.py  conftest.py  test_agents.py  test_ai_client.py  test_auto_persist.py  test_bridge.py  test_chunking.py  test_client_ops.py  test_codegen.py  test_connection.py  test_data_engineers.py  test_datacube.py  test_datacube_server.py  test_demo_agent_builder.py  test_demo_platform_agents.py  test_demo_rag.py  test_dh_table.py  test_embed_upload.py  test_embeddings.py  test_extraction.py  test_lakehouse.py  test_lakehouse_integration.py  test_lakehouse_rls.py  test_lakehouse_rls_integration.py  test_llm.py  test_marketdata.py  test_media.py  test_media_integration.py  test_multi_client.py  test_questdb_integration.py  test_rag.py  test_reactive.py  test_reactive_finance.py  test_reactive_irs.py  test_registry.py  test_risk_engine.py  test_scheduler.py  test_server_tables.py  test_store.py  test_timeseries.py  (+4 more)
timeseries/: __init__.py  _registry.py  admin.py  base.py  client.py  consumer.py  models.py
timeseries/backends/memory/: __init__.py
timeseries/backends/questdb/: __init__.py  manager.py  reader.py  writer.py
workflow/: _registry.py  admin.py  dbos_engine.py  dispatcher.py  engine.py
